--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Tablescape Tuesday</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="styles.css">
