Trying new stuff

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <a href="home.html">
         <img src="images/toplogo.PNG">
         </a>
-        
+
       </div>
 
 
@@ -42,314 +42,61 @@
 
     <hr>
 
+      <div id="post">
 
 
+        <div id="post2">
 
+        <div id="title">
+          <h1>New Years Day</h1>
+        </div>
 
-     <div id="wpost">
+        <div id="date">
+          <h1>January 1</h1>
+        </div>
+        
+        <div id="author">
+          <h1>Joanna Shumaker</h1>
+        </div>
 
-      <div id="det">
-        <h4>November 24, 2018</h4>
-        <a href="about.html">
-        <h4>Joanna Shumaker</h4>
-        </a>
+        </div>
+
+        <div id="ipic">
+        <img src="images/img3.jpg" width="100%" height="720px">
       </div>
 
-
-    <div id="post">
-
-
-
-
-      <a href="article.html">
-        <h1>Thanksgiving</h1>
-      </a>
-
-
-
-
-    <div id="pimg">
-      <img src="images/img1.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="article.html">
-      <div id="arw">
-        <img src="images/arrow.png" width="130">
-      </div>
-    </a>
-
-    </div>
 
       </div>
 
 
-
-
-
-      <div id="wpost">
-
-      <div id="det">
-        <h4>November 24, 2018</h4>
-        <a href="about.html">
-        <h4>Joanna Shumaker</h4>
-        </a>
-      </div>
-
-
-    <div id="post">
-
-
-
-
-      <a href="article.html">
-        <h1>Thanksgiving</h1>
-      </a>
-
-
-
-
-    <div id="pimg">
-      <img src="images/img1.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="article.html">
-      <div id="arw">
-        <img src="images/arrow.png" width="130">
-      </div>
-    </a>
-
-    </div>
-
-      </div>
-
-
-
-
-
-
-
-      <div id="wpost">
-
-      <div id="det">
-        <h4>November 24, 2018</h4>
-        <a href="about.html">
-        <h4>Joanna Shumaker</h4>
-        </a>
-      </div>
-
-
-    <div id="post">
-
-
-
-
-      <a href="article.html">
-        <h1>Thanksgiving</h1>
-      </a>
-
-
-
-
-    <div id="pimg">
-      <img src="images/img1.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="article.html">
-      <div id="arw">
-        <img src="images/arrow.png" width="130">
-      </div>
-    </a>
-
-    </div>
-
-      </div>
-
-
-
-
-
-
-      <div id="wpost">
-
-      <div id="det">
-        <h4>November 24, 2018</h4>
-        <a href="about.html">
-        <h4>Joanna Shumaker</h4>
-        </a>
-      </div>
-
-
-    <div id="post">
-
-
-
-
-      <a href="article.html">
-        <h1>Thanksgiving</h1>
-      </a>
-
-
-
-
-    <div id="pimg">
-      <img src="images/img1.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="article.html">
-      <div id="arw">
-        <img src="images/arrow.png" width="130">
-      </div>
-    </a>
-
-    </div>
-
-      </div>
-
-
-
-
-
-
-
-
-
-    <div id="wpost">
-
-      <div id="det">
-      <h4>November 17, 2018</h4>
-      <h4>By Joanna Shumaker</h4>
-      </div>
-
-    <div id="post">
-
-
-
-
-      <a href="test.html">
-        <h1>Mum Tablescape</h1>
-      </a>
-
-
-
-    <div id="pimg">
-      <img src="images/img3.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="test.html">
-    <div id="arw">
-    <img src="images/arrow.png" width="130">
-    </div>
-    </a>
-    </div>
-
-      </div>
-
-
-
-
-
-
-
-
-
-    <div id="wpost">
-
-      <div id="det">
-      <h4>November 17, 2018</h4>
-      <h4>By Joanna Shumaker</h4>
-      </div>
-
-
-    <div id="post">
-
-    <a href="test.html">
-    <h1>Back to School</h1>
-    </a>
-
-
-
-    <div id="pimg">
-    <img src="images/img4.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="test.html">
-    <div id="arw">
-    <img src="images/arrow.png" width="130">
-    </div>
-    </a>
-    </div>
-
-      </div>
-
-
-
-
-
-
-
-      <div id="wpost">
-
-      <div id="det">
-      <h4>November 17, 2018</h4>
-      <h4>By Joanna Shumaker</h4>
-      </div>
 
 
       <div id="post">
 
-      <a href="test.html">
-        <h1>Thanksgiving</h1>
-      </a>
 
+        <div id="post2">
+        <h1>New Years Day</h1>
 
+        <h1>January 1</h1>
 
-
-    <div id="pimg">
-      <img src="images/img1.jpg">
-    </div>
-
-    <p>This week we are looking at a table setting that has it all. With
-      festive feel to it (only kind that thanksgiving gives you), it has a little
-      bit of everything.</p>
-
-    <a href="test.html">
-      <div id="arw">
-        <img src="images/arrow.png" width="130">
+        <h1>Joanna Shumaker</h1>
       </div>
-    </a>
 
-    </div>
+        <div id="ipic">
+        <img src="images/img3.jpg" width="100%" height="720px">
+      </div>
+
 
       </div>
 
 
 
 
-    </div>
+
+
+
+
+
 
   </body>
 </html>
