--- a/home.html
+++ b/home.html
@@ -23,20 +23,138 @@
 
 
       <nav>
-        <a href="home.html">Home</a>
+        <a href="home.html">Blog</a>
 
         <a href="contact.html">Contact</a>
 
         <a href="about.html">About</a>
       </nav>
 
-
-    <hr>
-
-
-
+      <div id="hr1">
+        <hr>
+      </div>
 
 
+
+
+
+
+
+    <div id="post">
+
+      <h1>Elon Musk Test</h1>
+
+      <img src="images/elon.jpg">
+
+      <p>This is me writing about Musk and the history of the
+        companies that he has started in years of 2000-2010...
+         (<a href="https://google.com">read more</a>)
+      </p>
+
+
+
+    <div id="hr2">
+      <hr>
+    </div>
+
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div id="date">
+          <img src="images/date.png" width="80px" height="100px">
+        </div>
+
+        <div id="arw">
+          <img src="images/arw.png" width="50px" height="50px">
+        </div>
+
+
+
+
+
+    <div id="extra">
+
+
+    <div id="bio">
+
+      <img src="images/anon.png">
+
+      <h1>Bradley Hopkins</h1>
+
+      <p>Hi my name is Bradley and I think that Tesla is a pretty good
+        company that is doing good things for the world (in general).
+        Some may consider myself kinda crazy.
+      </p>
+
+    </div>
+
+
+
+
+
+
+
+    <div id="archive">
+
+      <h1>Archives</h1>
+
+        <hr>
+
+      <div id="leftd">
+        <h2>November 2018</h2>
+        <h2>October 2018</h2>
+        <h2>September 2018</h2>
+      </div>
+
+
+      <div id="rightd">
+        <h2>November 2018</h2>
+        <h2>October 2018</h2>
+        <h2>September 2018</h2>
+      </div>
+
+
+
+    </div>
+
+
+
+
+</div>
 
 
 
